# Self-Pruning-Network

./: .gitignore  .vercelignore  ASSESSMENT_REPORT.md  README.md  pyproject.toml
app/: api.py
artifacts/reports/: results.csv  results.md  summary.json  training_history.csv
artifacts_graphs_smoke/reports/: results.csv  results.md  summary.json  training_history.csv
artifacts_run/reports/: results.csv  results.md  summary.json
artifacts_smoke/reports/: results.csv  results.md  summary.json
artifacts_tuned_smoke/reports/: results.csv  results.md  summary.json
scripts/: train_and_report.py
src/self_pruning_network/: __init__.py  data.py  model.py  reporting.py  train.py  utils.py
tests/: test_prunable_layer.py
